--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/joanna/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-1424461649.properties
+deploy.ant.properties.file=/home/joanna/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31460766353.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/joanna/Pobrane/glassfish5/glassfish/domains/air.dispertion
-j2ee.server.home=/home/joanna/Pobrane/glassfish5/glassfish
-j2ee.server.instance=[/home/joanna/Pobrane/glassfish5/glassfish:/home/joanna/Pobrane/glassfish5/glassfish/domains/air.dispertion]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/joanna/Pobrane/glassfish5
+j2ee.server.domain=/home/joanna/Pobrane/glassfish5-nightly/glassfish/domains/airdispersion
+j2ee.server.home=/home/joanna/Pobrane/glassfish5-nightly/glassfish
+j2ee.server.instance=[/home/joanna/Pobrane/glassfish5-nightly/glassfish:/home/joanna/Pobrane/glassfish5-nightly/glassfish/domains/airdispersion]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/joanna/Pobrane/glassfish5-nightly
 user.properties.file=/home/joanna/.netbeans/8.2/build.properties
