--- a/web/package.json
+++ b/web/package.json
@@ -36,8 +36,8 @@
     "react-dom": "^16.4.0",
     "react-hot-loader": "^4.3.3",
     "shebang-loader": "0.0.1",
-    "webpack": "^3.5.6",
-    "webpack-cesium": "^1.37.0"
+    "webpack": "3.5.6",
+    "webpack-cesium": "1.37.0"
   },
   "devDependencies": {
     "@material-ui/core": "^1.2.0",
@@ -46,7 +46,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cesium": "^1.47.0",
+    "cesium": "1.47.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.16.0",
     "event-emitter": "^0.3.5",
